--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
       "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
       "@styles/*": ["src/styles/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@router/*": ["src/router/*"]
     }
   },
   "include": ["src/**/*"],
