--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "serve": "vite preview --host",
     "lint": "eslint .",
     "preview": "vite preview"
   },
