--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "build": "vite build",
     "serve": "vite preview --host",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "vite build --mode analyze"
   },
   "dependencies": {
-    "lenis": "^1.0.35",
-    "aos": "^2.3.4",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.0.35",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tailwindcss": "^4.1.11",
+    "terser": "^5.43.1",
     "vite": "^7.0.4"
   }
 }
